// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecommendedItem /> render with props should correct render with all props 1`] = `
<RecommendedItem
  currencyGrapheme="$"
  imageAlt="alt text"
  imageSrc="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
  name="Милая картина из шерсти Schrodinger cat, А5"
  oldPrice={234.9}
  price={135.4}
  url="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
>
  <div
    className="item"
  >
    <div
      className="image-wrapper"
    >
      <img
        alt="alt text"
        className="image"
        src="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
      />
    </div>
    <div
      className="price-wrapper"
    >
      <Price
        className="price"
        currencyGrapheme="$"
        value={135.4}
      >
        <span
          className="root price"
        >
          135,40 $
        </span>
      </Price>
      <Price
        className="old-price"
        crossedOut={true}
        currencyGrapheme="$"
        value={234.9}
      >
        <span
          className="root old-price crossed-out"
        >
          234,90 $
        </span>
      </Price>
    </div>
    <ForwardRef(Link)
      className="link"
      color="gray87"
      href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
    >
      <a
        className="link link color__gray87 hover-color__gray54"
        href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
      >
        Милая картина из шерсти Schrodinger cat, А5
      </a>
    </ForwardRef(Link)>
  </div>
</RecommendedItem>
`;

exports[`<RecommendedItem /> render with props should correct render without oldPrice 1`] = `
<RecommendedItem
  currencyGrapheme="$"
  imageAlt="alt text"
  imageSrc="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
  name="Милая картина из шерсти Schrodinger cat, А5"
  price={135.4}
  url="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
>
  <div
    className="item"
  >
    <div
      className="image-wrapper"
    >
      <img
        alt="alt text"
        className="image"
        src="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
      />
    </div>
    <div
      className="price-wrapper"
    >
      <Price
        className="price"
        currencyGrapheme="$"
        value={135.4}
      >
        <span
          className="root price"
        >
          135,40 $
        </span>
      </Price>
    </div>
    <ForwardRef(Link)
      className="link"
      color="gray87"
      href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
    >
      <a
        className="link link color__gray87 hover-color__gray54"
        href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
      >
        Милая картина из шерсти Schrodinger cat, А5
      </a>
    </ForwardRef(Link)>
  </div>
</RecommendedItem>
`;

exports[`<RecommendedItem /> without props should match snapshot 1`] = `
<div
  className="item"
>
  <ForwardRef(Link)
    className="link"
    color="gray87"
  />
</div>
`;
